--- a/src/components/AboutUs/MiddleAbout.css
+++ b/src/components/AboutUs/MiddleAbout.css
@@ -3,17 +3,53 @@
 }
 
 .box_1{
+    font-family: Poppins;
     display: flex;
     justify-content: center;
 }
 
 .box_2{
+    font-family: Poppins;
     display: flex;
     justify-content: center;
+    text-align: center;
+    height: 66px;
+    width: 981px;
     opacity: 0.699999988079071;
     font-size: 10px !important;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+}
 
+.box_3{
+    margin-left: 81px;
+    margin-right: 81px;
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 160px;
+    margin-bottom: 160px;
+}
+
+.box_3_1{
+    border-radius: 10px;
+    margin: 40px;
+    border: 1px solid gray;
+}
+
+.box_3_1 > img{
+    margin-left: 30px;
+    
+}
+
+.box_3_1 > h2 {
+    margin-left: 30px;
+    font-family: Poppins;    
+}
+
+
+.box_3_1 > p{
+    margin-left: 30px;
+    width: 650px;
+    height: 48px;
+    font-family: Poppins;
+    opacity: 0.699999988079071;    
 }
